--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
-
-<!--
-
-Run a find replace on:
-- DevpostURL -> Your Devpost URL: http://pennappsxii.devpost.com
-- HackathonName -> Your Hackathon Name -> PennApps XII
-
-You can also use your own favico or Hackathon logo/header.
-
--->
-
 <html>
 <head>
   <meta charset='utf-8'>
-  <title>HackathonName Expo</title>
+  <title>WiCHacks Expo</title>
 
   <!-- Meta tags to eliminate caching. I don't totally get how these work, so you might not need all of them. cribbed from: http://stackoverflow.com/questions/1341089/using-meta-tags-to-turn-off-caching-in-all-browsers-->
   <meta http-equiv="cache-control" content="max-age=0" />
@@ -36,8 +25,8 @@ You can also use your own favico or Hackathon logo/header.
   <div class="container">
     <div id="header">
       <h1>
-        <a href="DevpostURL" title="HackathonName Expo">
-          <img src="http://nealrs.github.io/devpost-follow-button/icon/devpost.svg" style="vertical-align:middle; width:60px;"> HackathonName
+        <a href="https://wichacks2017.devpost.com" title="WiCHacks Expo">
+          <img src="http://nealrs.github.io/devpost-follow-button/icon/devpost.svg" style="vertical-align:middle; width:60px;"> WiCHacks
         </a>
       <h1>
     </div>
@@ -54,16 +43,14 @@ You can also use your own favico or Hackathon logo/header.
           <th class="number">Table</th>
           <th class="name">Project</th>
           <th class="prize">Sponsor Prizes</th>
-          <th class="cat">Category</th> <!--You can comment out this column if you don't need it-->
         </tr>
       </thead>
       <tbody class="list">
         {{#data}}
           <tr>
-            <td class="number">E{{expo}} T{{table}}</td>
-            <td class="name"><a href="{{{link}}}" target="_blank">{{project}}</a></td>
+            <td class="number">{{table}}</td>
+            <td class="name"><a href="{{{link}}}" target="_blank">{{title}}</a></td>
             <td class="prize">{{sponsors}}</td>
-            <td class="cat">{{category}}</td> <!--You can comment out this column if you don't need it-->
           </tr>
         {{/data}}
       </tbody>
