--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="container">
     <div id="header">
       <h1>
-        <a href="https://wichacks2017.devpost.com" title="WiCHacks Expo">
-          <img src="http://nealrs.github.io/devpost-follow-button/icon/devpost.svg" style="vertical-align:middle; width:60px;"> WiCHacks
+        <a href="https://wichacks2017.devpost.com" title="WiCHacks Expo" style="width: 100%; background: #8560a8; display: block; padding: 20px">
+          <img src="https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/challenge_photos/000/455/961/datas/full_width.png" style="vertical-align:middle; width:220px;">
         </a>
       <h1>
     </div>
