--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <script id="template" type="x-tmpl-mustache">
     <div class="search_container">
-      <input class="search" type="search" placeholder="Filter by sponsor prize, project name, category or whatever" id="filter"/>
+      <input class="search" type="search" placeholder="Filter by sponsor prize" id="filter"/>
     </div>
     <table id="expoTable">
       <thead>
