--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             var tablenumber = submission['table'];
 
             searchOptions[title] = { name: title, display: 'Project: ' + title };
-            // searchOptions[tablenumber] = { name: tablenumber, display: 'Table: ' + tablenumber }; unintuitive, don't use
+            // searchOptions[tablenumber] = { name: tablenumber, display: 'Table: ' + tablenumber }; Unintuitive, don't use
 
             var s = submission['sponsors'];
             tableData.data[x]['sponsors'] = s.replace(/,/ig, ", ");
